--- a/src/components/HeroBanner.sass
+++ b/src/components/HeroBanner.sass
@@ -1,6 +1,8 @@
 @use '../mixins' as *
+
 .HeroBanner
   width: 100%
+  background-color: green
   min-height: 810px
   box-sizing: border-box
   .HeroBannerForeground
@@ -44,6 +46,7 @@
         font-weight: 500
         margin-bottom: 8px
         font-size: 15px
+
   .ExplainerVideo
     .PlayButtonWrapper
       position: absolute
