--- a/src/components/NavigationBar.sass
+++ b/src/components/NavigationBar.sass
@@ -5,42 +5,114 @@
   top: 0px
   left: 0px
   right: 0px
-  height: 130px
-  padding-top: 26px
   background: linear-gradient(to bottom, rgb(8,13,61,1), rgba(10,13,49,0.7))
   z-index: 10
+  padding-top: 26px
 
-  .SiteLogo
-    position: absolute
-    top: 26px
-    left: calc(50% - #{$contentWidth} / 2 + 2px)
-    
+  @include MobileAndTabletView
+    height: 90px
 
-  .OpenBurgerMenuButton, .CloseBurgerMenuButton
-    display: none
-  .NavigationBarMenu
-    position: absolute
-    left: 50%
-    width: calc(#{$contentWidth} / 2)
-    height: 100%
-    .TopRow
+    .SiteLogo
+      position: absolute
+      top: 26px
+      @include MobileView
+        left: max(calc(50% - 180px + 2px), 0px)
+        width: 200px
+      @include TabletView
+        left: max(calc(50% - 384px + 2px), 0px)
+        height: 50px
+        
+
+    .OpenBurgerMenuButton
+      @include LinklikeButton
+      color: white
+      font-size: 36px
+      position: absolute
+      @include MobileView
+        right: max(calc(50% - 180px + 2px), 0px)
+        top: 25px
+      @include TabletView
+        top: 30px
+        right: max(calc(50% - 384px + 2px), 0px)
+
+    .NavigationBarMenu
       display: flex
-      flex-direction: row
-      justify-content: space-around
-      align-items: center
+      flex-direction: column
+      position: absolute
+      top: 0px
+      width: 350px
+      box-sizing: border-box
+      //background: linear-gradient(to bottom, rgb(8,13,61,1), rgba(10,13,49,1))
+      background: radial-gradient(rgba(#204169, 0.9), rgba(#102135, 0.9))
+      border-left: 1px solid #0F6BAE
+      border-bottom: 1px solid #0F6BAE
+      padding: 25px
+      max-width: 350px
+      box-sizing: border-box
+      border-top: none
+      border-right: none
+      border-radius: 0px
+      border-bottom-left-radius: 25px
+      text-align: center
+      transition: right .5s, filter 2s
+      &.BurgerMenuOpen
+        right: 0px
+      &.BurgerMenuClosed
+        right: -400px
+        filter: blur(10px)
+      .CloseBurgerMenuButton
+        @include FriendlyWhiteButton
+        order: -2
+        margin-left: auto
+        font-size: 30px
+        width: 1.2em
+        height: 1.2em
+
       .SocialMedia
+        margin-top: 30px
+        margin-bottom: 30px
+      .SiteLinks
+        order: -1
+        a, :link, :visited
+          display: block
+          font-size: 26px
+          @include EmpireLink
+
+  @include DesktopView
+    height: 130px
+    padding-top: 26px
+
+    .SiteLogo
+      position: absolute
+      top: 26px
+      left: calc(50% - #{$contentWidth} / 2 + 2px)
+      
+
+    .OpenBurgerMenuButton, .CloseBurgerMenuButton
+      display: none
+    .NavigationBarMenu
+      position: absolute
+      left: 50%
+      width: calc(#{$contentWidth} / 2)
+      height: 100%
+      .TopRow
         display: flex
         flex-direction: row
         justify-content: space-around
-        width: 289px
+        align-items: center
+        .SocialMedia
+          display: flex
+          flex-direction: row
+          justify-content: space-around
+          width: 289px
 
-    .BottomRow
-      height: 47px
-    .SiteLinks
-      display: flex
-      flex-direction: row
-      justify-content: space-between
-      align-items: center
-      a, :link, :visited
-        font-size: 20px
-        @include EmpireLink
+      .BottomRow
+        height: 47px
+      .SiteLinks
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
+        a, :link, :visited
+          font-size: 20px
+          @include EmpireLink
