--- a/src/components/SocialMediaIcon.sass
+++ b/src/components/SocialMediaIcon.sass
@@ -6,5 +6,5 @@
   padding: 10px
   
   &:hover
-    transform: scale(1.7)
+    //transform: scale(1.7)
     filter: brightness(2000%)
